SJ-194: create post component
